--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts5": "^5.4.8",
+    "@amcharts/amcharts5-fonts": "^5.0.1",
+    "@amcharts/amcharts5-geodata": "^5.1.1",
     "@angular/animations": "^15.2.0",
     "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.0",
@@ -20,6 +23,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@canvasjs/angular-charts": "^1.0.3",
     "@polygon.io/client-js": "^7.2.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
