--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^15.2.0",
     "@canvasjs/angular-charts": "^1.0.3",
     "@polygon.io/client-js": "^7.2.6",
+    "dayjs": "^1.11.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
